--- a/package.json
+++ b/package.json
@@ -9,9 +9,14 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.89.0",
+    "cheerio": "^1.1.2",
+    "lucide-react": "^0.562.0",
     "next": "16.1.1",
+    "node-fetch": "^3.3.2",
     "react": "19.2.3",
-    "react-dom": "19.2.3"
+    "react-dom": "19.2.3",
+    "react-quill-new": "^3.7.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
